2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Panel.cs: GetVisualChild now throws ArgumentOutOfRangeException when the passed index is out of range.

2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed previous change.

2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Changed measurement for children in star sized rows/columns.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed GridLineRenderer line drawing style.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Children are now measured with constrains adjusted for minimum and maximum row/column size.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed minimum and maximum row/column size handling when the size is star.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinition.cs, RowDefinition.cs: Call InvalidateMeasure on the owner grid when size maximum or minimum changes.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: GridLinesRenderer-related partial fix.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinition.cs, RowDefinition.cs: Call InvalidateMeasure on the owner grid when size changes.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinitionCollection.cs, RowDefinitionCollection.cs: Added exception cases.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* RowDefinition.cs, ColumnDefinition.cs: Added Grid property.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added a PropertyChangedCallback to ShowGridLines.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added handling for out of range Row/Column values.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Fixed type in previous change.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* Grid.cs: Added validation for Column, ColumnSpan, Row, RowSpan.
